POR/RefEdge/src/objects/Attribute__c.object
<CustomObject>
    <description>An object that contains various Attributes.</description>
    <fields>
        <fullName>Attribute_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attribute Mapping</label>
        <referenceTo>Attribute_Mapping__c</referenceTo>
        <relationshipLabel>Attributes</relationshipLabel>
        <relationshipName>Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inheritable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Can Only Be Selected for Level 0 Attributes.</description>
        <inlineHelpText>Can Only Be Selected for Level 0 Attributes.</inlineHelpText>
        <label>Inheritable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <description>Level of this attribute in the tree</description>
        <inlineHelpText>Level of this attribute in the tree</inlineHelpText>
        <label>Level</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ParentIds__c</fullName>
        <label>ParentIds</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The parent of the attribute</description>
        <inlineHelpText>If Parent not selected then the attribute is a root attribute</inlineHelpText>
        <label>Parent</label>
        <referenceTo>Attribute__c</referenceTo>
        <relationshipLabel>Attributes</relationshipLabel>
        <relationshipName>Attributes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Attribute_Mapping_Detail__c</fullName>
        <formula>Attribute_Mapping__r.Object__c &amp; Attribute_Mapping__r.Related_Object__c &amp; Attribute_Mapping__r.Field_Api_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product Attribute Mapping Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <label>Product ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_Limit_to_Acct_or_Cntct__c</fullName>
        <description>Selecting &quot;Account&quot; indicates this should only show when adding Attributes to Accounts; selecting &quot;Contact&quot; indicates this should only show when adding Attributes to Contacts.</description>
        <inlineHelpText>Selecting &quot;Account&quot; indicates this should only show when adding Attributes to Accounts; selecting &quot;Contact&quot; indicates this should only show when adding Attributes to Contacts.</inlineHelpText>
        <label>Limit to Account or Contact</label>
        <picklist>
            <picklistValues>
                <fullName>Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Root_Parent__c</fullName>
        <label>Root Parent</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Attribute</label>
    <listViews>
        <fullName>All_Attributes</fullName>
        <columns>NAME</columns>
        <columns>Level__c</columns>
        <columns>Parent__c</columns>
        <columns>Attribute_Mapping__c</columns>
        <columns>Inheritable__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Attributes</label>
    </listViews>
    <nameField>
        <label>Attribute  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Parent_Level_Check</fullName>
        <active>false</active>
        <errorConditionFormula>Level__c = Parent__r.Level__c + 1 || Level__c = 0</errorConditionFormula>
        <errorDisplayField>Parent__c</errorDisplayField>
        <errorMessage>Child level must be one more than it&apos;s parent or 0 if it&apos;s a root attribute</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Root_level_Attribute_Reassigned</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(Parent__c)), Level__c = 0)</errorConditionFormula>
        <errorMessage>The Root level Attribute cannot be made child of another Attribute.</errorMessage>
    </validationRules>
</CustomObject>